# ToddlerTransducer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
WiringDiagram/: ToddlerTransducer.kicad_prl  ToddlerTransducer.kicad_pro  ToddlerTransducer.kicad_sch  ToddlerTransducer.kicad_sym  sym-lib-table
audio_files/: metadata
install/: ToddlerTransducer.service  launch_toddler_transducer.sh  ota_update.sh
src/toddler_transducer/: __init__.py  __main__.py  audio.py  audio_file_manager.py  config.py  gpio.py  main.py  metadata.py  multithreading_proxy.py  puck_playback.py  rfid.py
src/toddler_transducer/helper_functions/: wifi_connection.py
src/toddler_transducer/proxies/: __init__.py  fake_raspberry_pi.py  fake_rpi_setup.py  mfrc522_proxy.py  multithreading_proxy.py
src/toddler_transducer/web_ui/: __init__.py  app.py  html_templates.py  launch.py  root.py
src/toddler_transducer/web_ui/static/: player.css  searchable_list.css  searchable_list.js
src/toddler_transducer/web_ui/templates/: index.html
